[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oauth2tools"
version = "0.3.0"
authors = [
  { name="Andreas Rühl", email="andreas.ruehl@gmail.com" },
]
description = "A toolset for the most requirements dealing with OAuth2."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'flask',
    'requests',
    'requests-oauthlib',
    'werkzeug',
]

[project.urls]
"Homepage" = "https://github.com/aruehl/oauth4cli"
"Bug Tracker" = "https://github.com/aruehl/oauth4cli/issues"
